--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -206,14 +206,14 @@
 
 	#nullable disable
 
-		[Parameter]
-		public string idioma { get; set; }
+	[Parameter]
+	public string idioma { get; set; }
 
-		List<Juego> juegosDestacadosMostrar = new List<Juego>();
-		List<Juego> juegosMinimosMostrar = new List<Juego>();
-		List<Juego> juegosAñadidosMostrar = new List<Juego>();
-		List<Noticia> noticiasMostrar = new List<Noticia>();
-		List<Noticia> noticiaEvento = new List<Noticia>();
+	List<Juego> juegosDestacadosMostrar = new List<Juego>();
+	List<Juego> juegosMinimosMostrar = new List<Juego>();
+	List<Juego> juegosAñadidosMostrar = new List<Juego>();
+	List<Noticia> noticiasMostrar = new List<Noticia>();
+	List<Noticia> noticiaEvento = new List<Noticia>();
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -223,24 +223,39 @@
 		{
 			juegosDestacadosMostrar = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosDestacados");
 
-			foreach (var juego in juegosDestacadosMostrar)
+			if (juegosDestacadosMostrar.Count > 0)
 			{
-				juego.Imagenes.Library_600x900 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Library_600x900, "juegos", juego.IdMaestra.ToString(), "library_600x900");
+				juegosDestacadosMostrar = juegosDestacadosMostrar.OrderBy(x => x.Id).ToList();
+
+				foreach (var juego in juegosDestacadosMostrar)
+				{
+					juego.Imagenes.Library_600x900 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Library_600x900, "juegos", juego.IdMaestra.ToString(), "library_600x900");
+				}
 			}
 
 			juegosMinimosMostrar = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosMinimos");
 
-			foreach (var juego in juegosMinimosMostrar)
+			if (juegosMinimosMostrar.Count > 0)
 			{
-				juego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.IdMaestra.ToString(), "capsule_231x87");
+				juegosMinimosMostrar = juegosMinimosMostrar.OrderBy(x => x.Id).ToList();
+
+				foreach (var juego in juegosMinimosMostrar)
+				{
+					juego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.IdMaestra.ToString(), "capsule_231x87");
+				}
 			}
 
 			juegosAñadidosMostrar = BaseDatos.Juegos.Buscar.Todos(conexion, "portadaJuegosAnadidos");
 
-			foreach (var juego in juegosAñadidosMostrar)
+			if (juegosAñadidosMostrar.Count > 0)
 			{
-				juego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.IdMaestra.ToString(), "capsule_231x87");
-			}
+				juegosAñadidosMostrar = juegosAñadidosMostrar.OrderBy(x => x.IdMaestra).Reverse().ToList();
+
+				foreach (var juego in juegosAñadidosMostrar)
+				{
+					juego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.IdMaestra.ToString(), "capsule_231x87");
+				}
+			}			
 
 			noticiasMostrar = BaseDatos.Noticias.Buscar.Todas(conexion, "portadaNoticias");
 
