--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -143,6 +143,11 @@
 	[Parameter]
 	public string idioma { get; set; }
 
+	protected override async Task OnInitializedAsync()
+	{
+		
+	}
+
 	private string MostrarFechaTermina(DateTime fecha)
 	{
 		if (fecha.Year > 2022)
