--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -40,7 +40,7 @@
 
 @if (gratisPasados.Count > 0)
 {
-	<div style="font-size: 23px;">
+	<div style="font-size: 23px; margin-top: 60px;">
 		@Herramientas.Idiomas.CogerCadena(idioma, "Free.String2")
 	</div>
 
