--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -126,7 +126,7 @@
 
 					foreach (var juego in juegosActuales)
 					{
-						if (juego.Tipo == gratis.Id)
+						if (juego.Tipo == gratis.Tipo)
 						{
 							juegos2.Add(juego);
 						}
@@ -153,7 +153,7 @@
 
 					foreach (var juego in juegosPasados)
 					{
-						if (juego.Tipo == gratis.Id)
+						if (juego.Tipo == gratis.Tipo)
 						{
 							juegos2.Add(juego);
 						}
