--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -135,8 +135,7 @@
 					</a>
 				</div>
 			</div>
-		}
-		
+		}		
 	</div>
 
 	<div class="portada-columna portada-columna-der">
@@ -156,15 +155,21 @@
 				@foreach (var noticia in noticiasMostrar)
 				{
 					<div class="perfil-flexible-centrado" style="margin-top: 15px;">
-						<a class="boton-pequeño" style="padding: 20px;" href="/news/@noticia.IdMaestra">
+						<a class="boton-pequeño" style="padding: 1px;" href="/news/@noticia.IdMaestra">
 							<div class="perfil-flexible-centrado">
-								<div style="width: 80%;">
-									@Herramientas.Idiomas.MirarTexto(idioma, @noticia.TituloEn, @noticia.TituloEs)
+								<div style="width: 40%; height: 135px;">
+									<img src="/imagenes/noticias/@noticia.IdMaestra.ToString()/header.webp" style="max-width: 100%; max-height: 100%;" />
 								</div>
 
-								<div style="width: 20%; text-align: right;">
-									@noticia.FechaEmpieza.Day.ToString()/@noticia.FechaEmpieza.Month.ToString()/@noticia.FechaEmpieza.Year.ToString()
-								</div>			
+								<div style="width: 60%; padding: 20px;">
+									<div style="margin-bottom: 10px;">
+										@noticia.FechaEmpieza.Day.ToString()/@noticia.FechaEmpieza.Month.ToString()/@noticia.FechaEmpieza.Year.ToString()
+									</div>
+
+									<div>
+										@Herramientas.Idiomas.MirarTexto(idioma, @noticia.TituloEn, @noticia.TituloEs)
+									</div>
+								</div>
 							</div>
 						</a>
 					</div>
@@ -262,6 +267,14 @@
 			if (noticiasMostrar.Count > 0)
 			{
 				noticiasMostrar = noticiasMostrar.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
+
+				foreach (var noticia in noticiasMostrar)
+				{
+					if (noticia.Imagen != null)
+					{
+						await Herramientas.Imagenes.DescargarYGuardar(noticia.Imagen, "noticias", noticia.IdMaestra.ToString(), "header");
+					}
+				}
 			}
 
 			noticiaEvento = BaseDatos.Noticias.Buscar.Todas(conexion, "portadaNoticiasEvento");
